--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,17 @@ spring.jpa.show-sql=true
 
 
 
+spring.web.cors.allowed-origins=http://localhost:39991
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+
+
+
 
 
